--- a/mac/RaiseMan/RaiseMan/Base.lproj/Main.storyboard
+++ b/mac/RaiseMan/RaiseMan/Base.lproj/Main.storyboard
@@ -747,6 +747,9 @@
                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
+                                            <connections>
+                                                <outlet property="nextKeyView" destination="DgI-x4-Fg7" id="FmZ-rs-jfH"/>
+                                            </connections>
                                         </textField>
                                         <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgI-x4-Fg7">
                                             <rect key="frame" x="125" y="61" width="162" height="22"/>
@@ -756,6 +759,9 @@
                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
+                                            <connections>
+                                                <outlet property="nextKeyView" destination="PO7-kZ-EfU" id="p8Y-ui-L3R"/>
+                                            </connections>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nfk-VB-br2">
                                             <rect key="frame" x="18" y="31" width="101" height="17"/>
